--- a/src/component/AllProjects.css
+++ b/src/component/AllProjects.css
@@ -4,9 +4,9 @@
     left: 12vw;
     display: grid;
     grid-template-columns: repeat(3,20vh);
-   
-  
-
+}
+.link{
+    text-decoration: none;
 }
 
 .head{
