--- a/src/component/AllProjects.css
+++ b/src/component/AllProjects.css
@@ -1,18 +1,17 @@
-.main{
-    position: relative;
-    top: 22vh;
-    left: 12vw;
-    display: grid;
-    grid-template-columns: repeat(3,20vh);
-}
+
 .link{
     text-decoration: none;
 }
 
 .head{
     margin: 2vh;
-    width: 20vw;
+    width: 18rem;
     border: 1px solid black;
     border-radius: 2.5vh;
-    height: 25vh;
+    height: 10rem;
+  }
+
+  .Card{
+    display: flex;
+    flex-direction: row;
   }
