--- a/src/component/Navbar.css
+++ b/src/component/Navbar.css
@@ -1,13 +1,23 @@
+.maindiv{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 10%;
+}
+.internal_div{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    padding: 0 10%;
+}
 ul{
-    position: fixed;
-    top: 25vh;
-    left: 3vw;
+    margin-bottom: 0;
 }
 
 
 li{
     list-style: none;
-    width: 100%;
-    border-radius: 50%;
+    width: 2rem;
+    border-radius: 1rem;
     background-color: rgb(182, 209, 233);
 }
