--- a/src/pages/GeneratePDF.css
+++ b/src/pages/GeneratePDF.css
@@ -1,14 +1,8 @@
 .button1{
-    position: fixed;
-    z-index: 1;
-    margin-top: 1rem;
-    top: 10vh;
-    left: 80vw;
-}
+        align-self: center;
+        margin-top: 2rem;
 
-    .margin{
-        position: fixed;
-        top: 15vh;
-        left: 20vw;
-        width: 50vw;
-    }
+}
+.table{
+    width:40rem;
+}
