--- a/src/pages/ProjectID.css
+++ b/src/pages/ProjectID.css
@@ -1,38 +1,29 @@
-.position{
-    position: relative;
-    top: 22vh;
-    left: 12vw;
-    display: grid;
-    grid-template-columns: 20vh,20vh;
-}
 
 .head1{
-    margin: 2vh;
-    width: 20vw;
-    border: 1px solid black;
-    border-radius: 2.5vh;
-    height: 25vh;
+  margin: 2vh;
+  width: 18rem;
+  border: 1px solid black;
+  border-radius: 2.5vh;
+  height: 10rem; 
   }
+.Card1{
+  display: flex;
+  flex-direction: row;
+}
+
   .link{
     text-decoration: none;
 
   }
 
-  .button2{
-    position: fixed;
-    top: 0;
-    right: 0;
-  }
+
  
 
   .details{
-    position: fixed;
-    left: 40vw;
-    bottom: 30vh;
     text-decoration: underline;
     text-align: center;
-    width: 40vh;
-    height: 5vh;
+    width: 40%;
+    height: 5%;
     border-radius: 2.5vw;
     padding:auto;
     box-shadow: 0.5vw 0.5vw #888888;
