--- a/src/pages/ProjectID.css
+++ b/src/pages/ProjectID.css
@@ -1,4 +1,11 @@
 
+.button2{
+  align-self: flex-end ;
+}
+.margin{
+  margin-top: 2rem;
+}
+
 .head1{
   margin: 2vh;
   width: 18rem;
@@ -6,17 +13,14 @@
   border-radius: 2.5vh;
   height: 10rem; 
   }
-.Card1{
+
+  .Card1{
   display: flex;
   flex-direction: row;
 }
 
-  .link{
-    text-decoration: none;
-
-  }
-
   .details{
+  align-self: center ;
     text-decoration: underline;
     text-align: center;
     width: 40%;
