--- a/src/component/Navbar.css
+++ b/src/component/Navbar.css
@@ -2,22 +2,52 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-top: 10%;
-}
-.internal_div{
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    padding: 0 10%;
-}
-ul{
-    margin-bottom: 0;
+    margin-top: 5%;
 }
 
+
+ul{
+    margin-bottom: 0;
+    margin-right: 5rem;
+}
 
 li{
     list-style: none;
-    width: 2rem;
+    width: 3rem;
+    height: 3rem;
     border-radius: 1rem;
+    padding-left: 1rem;
+    padding-top: 1rem;
+    margin-bottom: 1rem;
     background-color: rgb(182, 209, 233);
+}
+@media(max-width: 768px){
+    .maindiv{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 5%;
+    }
+    ul{
+        display: flex;
+        flex-direction: row;
+        margin-top: 5rem;
+    }
+    li{
+        list-style: none;
+        width: 2rem;
+        height: 2rem;
+        border-radius: 1rem;
+        padding-top: 1rem;
+        padding-right: 1rem;
+        margin-right: 1rem;
+        background-color: rgb(182, 209, 233);
+    }
+}
+
+
+
+.internal_div{
+    display: flex;
+    flex-direction: column;
 }
